--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url(images/matbakgrund1.jpeg);
+            background-image: url('/tallriken/images/matbakgrund1.jpeg');
             background-size: cover;
             background-position: center;
         }
