--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
                 /* En kolumn för mycket små skärmar */
             }
         }
+        /* Lägg till den nya CSS-koden för footer-banner här */
+        .footer-banner {
+            background-color: #000; /* Eller någon annan färg som passar din design */
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .footer-banner a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .footer-banner a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -126,6 +146,9 @@
 
     <div id="data-container"></div>
 
+    <div class="footer-banner">
+        <!-- Innehåll för din banner, t.ex. Om Oss och Tipsa Oss länkar -->
+    </div>
 
     <script>
         let allData = [];
@@ -182,6 +205,11 @@
 
     </script>
     <script async src="//www.instagram.com/embed.js"></script> <!-- Lägg till Instagrams embed-script -->
+
+    <div class="footer-banner" style="text-align: center; padding: 20px;">
+        <a href="omoss.html" style="color: white; margin-right: 10px;">Om Oss</a>
+        <a href="tipsaoss.html" style="color: white;">Tipsa Oss</a>
+    </div>
 </body>
 
 </html>
