anpassade instagraminläggen så att det har samma bredd och är scrollningsbara

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             align-self: flex-start;
         }
 
+        .matratt iframe {
+            width: 100%;
+            /* Säkerställer att bredden anpassas till containern */
+            height: 400px;
+            /* Standardiserad höjd för alla Instagram-inlägg */
+            overflow-y: auto;
+            /* Aktiverar vertikal skrollning inuti inlägget */
+            display: block;
+            border: none;
+            /* Tar bort ramen runt iframe, valfritt */
+        }
+
         /* Stil för Instagram-inlägg */
         .instagram-media iframe {
             width: 100%;
