--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             /* Håller bakgrundsbilden på plats vid skrollning */
         }
 
+        /* Suddig bakgrund */
+        .blur-background {
+            filter: blur(5px);
+        }
+
         .search-container {
             position: fixed;
             top: 10%;
@@ -30,7 +35,8 @@
             width: 50%;
             display: flex;
             align-items: center;
-            z-index: 1000;
+            z-index: 2000;
+            transition: top 0.3s;
         }
 
         .search-container input[type='text'],
@@ -266,6 +272,29 @@
         }
 
         window.onload = loadData;
+
+        // Din befintliga loadData och performSearch funktioner...
+
+        // Lägg till följande kod
+        let lastScrollTop = 0;
+        window.addEventListener("scroll", function () {
+            var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+            if (currentScroll > lastScrollTop) {
+                // Scrollar nedåt
+                document.querySelector('.search-container').style.top = '-50px';
+                document.body.classList.add('blur-background');
+            } else {
+                // Scrollar uppåt
+                document.querySelector('.search-container').style.top = '10%';
+                if (window.scrollY === 0) {
+                    document.body.classList.remove('blur-background');
+                }
+            }
+            lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+        }, false);
+
+        window.onload = loadData;
+
     </script>
 
     <script async src="//www.instagram.com/embed.js"></script>
