--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 50%;
-            display: flex;
+            display: block;
+            /* Ändrad från flex till block */
             align-items: center;
             z-index: 2000;
             transition: top 0.3s;
@@ -218,7 +219,8 @@
             padding: 5px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            margin-bottom: 10px;
+            margin: 10px 0;
+            /* Lägg till margin för att separera från sökfältet */
         }
 
         .tag {
@@ -236,7 +238,7 @@
 
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Skriv ingredienser eller maträtt och tryck Enter...">
-        <div class="tag-container"></div> <!-- Tagg-containern placerad här -->
+        <div class="tag-container"></div> <!-- Flyttad tag-container -->
         <button onclick="performSearch()">Sök</button>
     </div>
 
